исправляем б2 менеджер,чистый тест

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,10 +49,17 @@ jobs:
         ls -la scripts || echo "Каталог scripts не найден"
 
     # --- ИЗМЕНЕНИЕ ЗДЕСЬ ---
-    - name: Запуск b2_storage_manager.py # Имя шага то же
+    - name: Запуск b2_storage_manager.py 
       run: |
-        echo "--- CHECK: Step Runner is Alive ---"
-    # --- КОНЕЦ ИЗМЕНЕНИЯ ---
+          echo "--- GITHUB ACTION: Setting PYTHONPATH ---"
+          export PYTHONPATH=$PYTHONPATH:/home/runner/work/b2/b2
+          echo "--- GITHUB ACTION: PYTHONPATH Set. Executing Python Script (Direct Output) ---"
+          # Запускаем Python БЕЗ перенаправления в файл
+          python -u scripts/b2_storage_manager.py --zero-delay || {
+          echo "--- GITHUB ACTION: Python script failed! ---"
+          exit 1 }
+          echo "--- GITHUB ACTION: Python script finished (Direct Output). ---"
+    
 
     - name: Загрузка логов как артефакта
       # Этот шаг теперь не найдет b2_storage_manager.log, так как мы его не создаем.
