--- a/config/config.json
+++ b/config/config.json
@@ -3,54 +3,49 @@
         "b2": {
             "endpoint": "https://s3.us-east-005.backblazeb2.com",
             "bucket_name": "boyarinnbotbucket"
-            // Секретные ключи B2_ACCESS_KEY, B2_SECRET_KEY из env
         },
         "midjourney": {
             "endpoint": "https://api.piapi.ai/api/v1/task",
-            "task_endpoint": "https://api.piapi.ai/mj/v2/fetch" // Эндпоинт для проверки статуса
-             // Секретный ключ MIDJOURNEY_API_KEY из env
+            "task_endpoint": "https://api.piapi.ai/mj/v2/fetch"
         },
         "openai": {
             "model": "gpt-4o"
-             // Секретный ключ OPENAI_API_KEY из env
         },
         "runwayml": {
-             // Секретный ключ RUNWAY_API_KEY из env
-            "endpoint": null, // Эндпоинт для SDK, если нужен
-            "model_name": "gen4" // <-- Убедитесь, что это точное имя модели для API!
+            "endpoint": null,
+            "model_name": "gen4"
         }
     },
-    "OPENAI_SETTINGS": { // Секция из оригинала
+    "OPENAI_SETTINGS": {
         "model": "gpt-4o",
         "max_tokens_text": 750,
         "temperature": 0.7,
         "max_tokens_script": 1000,
         "temperature_script": 0.7
     },
-    "FILE_PATHS": { // Объединено из оригинала, добавлен log_folder, output_image_format
+    "FILE_PATHS": {
         "meta_folder": "data/meta/",
         "scripts_folder": "scripts",
         "config_public": "config/config_public.json",
         "config_gen": "config/config_gen.json",
         "config_midjourney": "config/config_midjourney.json",
-        "content_output_path": "generated_content.json", // Из оригинала
-        "final_content_path": "final_content.json", // Из оригинала
-        "feedback_file": "data/feedback.json", // Из оригинала
-        "before_critique_path": "before_critique.json", // Из оригинала
-        "after_critique_path": "after_critique.json", // Из оригинала
-        "config_public_local": "config_public.json", // Из оригинала
+        "content_output_path": "generated_content.json",
+        "final_content_path": "final_content.json",
+        "feedback_file": "data/feedback.json",
+        "before_critique_path": "before_critique.json",
+        "after_critique_path": "after_critique.json",
+        "config_public_local": "config_public.json",
         "folder_444": "444/",
         "folder_555": "555/",
         "folder_666": "666/",
         "archive_folder": "archive/",
-        "log_folder": "logs", // Добавлено
-        "output_image_format": "png" // Перенесено/Добавлено
+        "log_folder": "logs",
+        "output_image_format": "png"
     },
-    "PROMPTS": { // Секция из оригинала
+    "PROMPTS": {
         "user_prompt_combined": "Write a 10-second video scene for '{topic}'. First, determine the mood (e.g., tragic, joyful, mysterious). Then, choose one creative approach from 'creative_prompts' in config. Create a script (up to 500 characters) matching the mood, including: Action: An object tied to the topic moves or changes uniquely. Camera: Use motion like 'zoom', 'spin', 'tilt', or 'shift'. Rhythm: Split 10s creatively (e.g., 3-5-2). Apply restriction: '{restriction}'. Also create a 'First Frame Description' (up to 500 characters) as a visual metaphor or key image for the script, focusing on composition, colors, lighting, and camera angle to convey the mood, **ensuring the final output is structured as a valid JSON object**. The total combined length of script and description should ideally be under 1000 characters. Ensure the output is in English and Runway-ready. \n\n**IMPORTANT: Your entire response must be ONLY a single JSON object containing two keys: 'script' (string value with the generated script) and 'first_frame_description' (string value with the generated description). Do not include any text before or after the JSON object.**",
         "second_request_prompt": "Take this script: '{script_text}'. Add an unexpected twist to enhance its creativity, keeping it under 500 characters and matching the mood of '{topic}'. English, Runway-ready."
     },
-    // --- ИСПРАВЛЕНО: Полный список из оригинала ---
     "creative_prompts": [
         "Describe the scene from the perspective of an object or animal tied to the topic.",
         "Use reverse narrative, starting from the end and moving backward.",
@@ -95,7 +90,6 @@
         "Avoid modern technology.",
         "Make everything dissolve or fade."
     ],
-    // --- ИСПРАВЛЕНО: Полный список из оригинала ---
     "restrictions": [
         "Use only warm colors (red, orange, yellow).",
         "Use only cold colors (blue, green, purple).",
@@ -128,7 +122,7 @@
         "No modern technology allowed.",
         "Everything dissolves or fades."
     ],
-    "CONTENT": { // Из оригинала
+    "CONTENT": {
         "topic": {
             "enabled": true,
             "max_length": 200,
@@ -146,20 +140,20 @@
             "prompt_template": "Ты гениальный историк и мастер сторителлинга, создающий посты для исторического Telegram-канала. Напиши текст на тему: '{topic}'. Длина: 80-100 слов, 2-3 абзаца. Следуй структуре:\n\n1. **Взрывной старт (1 предложение)**: Задай дерзкий вопрос (например, 'Выстояли бы вы под Брестом?') или брось шокирующий факт (например, 'В 1941 году Зоя погибла за правду').\n2. **Живой факт (1-2 предложения)**: Расскажи реальное событие Второй мировой войны с датой, местом или именем и яркой деталью (например, 'В 1941 году в Петрищево Зоя подожгла дома'), используй ТОЛЬКО проверенные факты, без вымысла.\n3. **Гениальный твист (1-2 предложения)**: Удиви реальным фактом с цифрой, именем или деталью (например, 'Её тело висело месяц перед врагом'), добавь лёгкую улыбку (например, 'а дух остался непобеждённым!'), только правда.\n4. **Крючок (1 предложение)**: Дай интригу о следующем посте без вопросов (например, 'Завтра — про подвиг в Бресте').\n\n**Стиль и тон**:\n- Дерзкий, живой, разговорный, с лёгким улыбчивым настроением.\n- Пиши как друг, без заумностей.\n- Эмодзи: ровно 3 (в старте, факте, твисте), крючок без эмодзи.\n\n**Цель**: Удивить, вызвать улыбку и желание переслать пост, сохраняя доверие к исторической правде. Используй ТОЛЬКО реальные факты Второй мировой войны, без выдуманных событий или деталей.",
             "temperature": 0.5
         },
-        "critique": { // Из оригинала (отключено)
+        "critique": {
             "enabled": false,
             "prompt_template": "...",
             "max_tokens": 300,
             "temperature": 0.3
         },
-        "improve": { // Из оригинала (отключено)
+        "improve": {
             "enabled": false,
             "prompt_template": "...",
             "max_tokens": 400,
             "temperature": 0.7
         }
     },
-    "SARCASM": { // Из оригинала
+    "SARCASM": {
         "enabled": true,
         "max_tokens_comment": 150,
         "max_tokens_poll": 250,
@@ -173,7 +167,7 @@
         "tragic_question_prompt": "Ты — Барон Сарказм, мудрый и сдержанный персонаж, создающий опросы для Telegram-канала. Придумай опрос по тексту: '{text}'. Вопрос до 10 слов, 3 варианта строго по 3-5 слов, с лёгкой торжественной иронией, без шуток, сарказма, легкомыслия или негативных эмоций (например, 'ужас', 'страх'), подчёркивая величие подвигов, а не жертвы, вовлекая читателя в размышление. Обязательно используй конкретные факты из текста. Возвращай результат ТОЛЬКО в формате: [QUESTION]: Вопрос [OPTION1]: Вариант 1 [OPTION2]: Вариант 2 [OPTION3]: Вариант 3 — без смайлов, без '[ Опрос : 🎭 ... ]', без тире, строго следуй этому шаблону. Пример: [QUESTION]: Чей подвиг весил больше? [OPTION1]: Матвеев с медальоном [OPTION2]: Солдаты в окопах [OPTION3]: Ленинград под блокадой",
         "tragic_poll_temperature": 0.6
     },
-    "GENERATE": { // Из оригинала
+    "GENERATE": {
         "topic_threshold": 7,
         "text_threshold": 8,
         "max_attempts": 1,
@@ -184,13 +178,12 @@
             "humor_ratio": 0.5
         }
     },
-    "IMAGE_GENERATION": { // Из оригинала + добавлены параметры MJ
+    "IMAGE_GENERATION": {
         "output_size": "1792x1024",
-        // --- ДОБАВЛЕНО/ВОССТАНОВЛЕНО: Параметры для initiate_midjourney_task ---
         "midjourney_version": "7.0",
-        "midjourney_style": "nul"
+        "midjourney_style": null
     },
-    "VISUAL_ANALYSIS": { // Из оригинала
+    "VISUAL_ANALYSIS": {
         "min_script_length": 200,
         "image_selection_criteria": [
             {"name": "Dramatism", "weight": 1.2},
@@ -215,22 +208,19 @@
         "image_selection_prompt": "Evaluate these 4 images for the prompt '{prompt}'. Score each from 0-10 on these criteria: {criteria}. Calculate the weighted total score for each image (score * weight). Return the image number (1-4) with the highest total score and a brief explanation.",
         "image_selection_max_tokens": 500
     },
-    // "PATHS": { ... } // Удалена как дубликат FILE_PATHS
-    // --- ДОБАВЛЕНА СЕКЦИЯ ---
     "WORKFLOW": {
         "max_tasks_per_run": 1,
-        "mj_timeout_seconds": 18000, // 5 часов
-        "runway_polling_timeout": 300, // 5 минут
-        "runway_polling_interval": 15 // 15 секунд
+        "mj_timeout_seconds": 18000,
+        "runway_polling_timeout": 300,
+        "runway_polling_interval": 15
     },
-     // --- ДОБАВЛЕНА СЕКЦИЯ ---
     "VIDEO": {
         "placeholder_bg_color": "cccccc",
         "placeholder_text_color": "333333",
         "mock_duration": 10,
         "mock_fps": 24,
         "mock_codec": "libx264",
-        "runway_duration": 10, // Длительность для Runway
-        "runway_ratio": "1280:768" // Соотношение сторон для Runway
+        "runway_duration": 10,
+        "runway_ratio": "1280:768"
     }
 }
