--- a/config/creative_config.json
+++ b/config/creative_config.json
@@ -46,7 +46,7 @@
     "Восхищение/Красота -> Ужас/Отвращение",
     "Ожидание/Предвкушение -> Неожиданный Поворот"
   ],
-  "creative_prompts": { 
+  "creative_prompts": {
     "main": [
       {"value": "Смешение Жанров/Стилей", "weight": 3},
       {"value": "Центральная Метафора", "weight": 3},
@@ -199,7 +199,7 @@
     "`\"Синий Экран Смерти\" (Метафора)`",
     "`Цифровые Артефакты Сжатия`"
   ],
-  "restrictions": [ 
+  "restrictions": [
     "Use only warm colors (red, orange, yellow).",
     "Use only cold colors (blue, green, purple).",
     "Scene in complete silence.",
@@ -230,5 +230,25 @@
     "Camera moves upside down.",
     "No modern technology allowed.",
     "Everything dissolves or fades."
+  ],
+  "visual_analysis_criteria": [
+      {"name": "Dramatism", "weight": 1.2},
+      {"name": "Epicness", "weight": 1.5},
+      {"name": "Historical context", "weight": 1.0},
+      {"name": "Depth of scene", "weight": 1.0},
+      {"name": "Balance of elements", "weight": 1.0},
+      {"name": "Focus", "weight": 1.2},
+      {"name": "Contrast", "weight": 1.0},
+      {"name": "Atmospheric lighting", "weight": 1.3},
+      {"name": "Color palette", "weight": 1.0},
+      {"name": "Clarity of key elements", "weight": 1.0},
+      {"name": "No artifacts", "weight": 1.0},
+      {"name": "Plausibility", "weight": 1.0},
+      {"name": "Historical attributes", "weight": 1.0},
+      {"name": "Iconography", "weight": 1.0},
+      {"name": "Dynamic tension", "weight": 1.2},
+      {"name": "Uniqueness", "weight": 1.3},
+      {"name": "Cinematic quality", "weight": 1.5},
+      {"name": "Prompt match", "weight": 1.2}
   ]
 }
