--- a/config/config.json
+++ b/config/config.json
@@ -78,7 +78,7 @@
         }
     },
     "IMAGE_GENERATION": { 
-        "output_size": "1280×720",
+        "output_size": "1280:720",
         "midjourney_version": "7.0",
         "midjourney_style": null
     },
@@ -97,6 +97,6 @@
         "mock_fps": 24,
         "mock_codec": "libx264",
         "runway_duration": 10,
-        "runway_ratio": "1280:768"
+        "runway_ratio": "1280:720"
     }
 }
