--- a/config/creative_config.json
+++ b/config/creative_config.json
@@ -1,4 +1,42 @@
 {
+  "FOCUS_FONT_MAPPING":{
+    "Исторические факты": "fonts/PTSerif-Regular.ttf",
+    "Исторические личности": "fonts/CormorantGaramond-Regular.ttf",
+    "Знаковые битвы (т)": "fonts/Oswald-Regular.ttf",
+    "Трагедии человечества (т)": "fonts/Merriweather_120pt-Regular.ttf",
+    "Доисторические события": "fonts/Arvo-Regular.ttf",
+    "Древние цивилизации": "fonts/Forum-Regular.ttf",
+    "Необычные открытия": "fonts/Montserrat-Regular.ttf",
+    "Артефакты и реликвии": "fonts/OldStandardTT-Regular.ttf",
+    "Конспирологические теории": "fonts/PTSansNarrow-Regular.ttf",
+    "Загадки истории": "fonts/EBGaramond-Regular.ttf",
+    "Исторические курьезы": "fonts/Comfortaa-Regular.ttf",
+    "Великие изобретения": "fonts/Roboto-Regular.ttf",
+    "Культурные феномены": "fonts/PlayfairDisplay-Regular.ttf",
+    "Исторические карты": "fonts/PTSans-Regular.ttf",
+    "История через цитаты": "fonts/Merriweather_120pt-Regular.ttf",
+    "Династии и монархи": "fonts/CormorantGaramond-Regular.ttf",
+    "Важные документы истории": "fonts/PTSerif-Regular.ttf",
+    "Мифы и легенды": "fonts/YesevaOne-Regular.ttf",
+    "Исторические праздники": "fonts/YesevaOne-Regular.ttf",
+    "Великие путешественники": "fonts/PTSans-Regular.ttf",
+    "История медицины": "fonts/PTSerif-Regular.ttf",
+    "Религии и верования": "fonts/OldStandardTT-Regular.ttf",
+    "Архитектурные чудеса": "fonts/Forum-Regular.ttf",
+    "История в искусстве": "fonts/PlayfairDisplay-Regular.ttf",
+    "Экономические кризисы и взлеты (т)": "fonts/RobotoSlab-Regular.ttf",
+    "История технологий": "fonts/Roboto-Regular.ttf",
+    "Исторические конфликты и их разрешение (т)": "fonts/Oswald-Regular.ttf",
+    "Женщины в истории": "fonts/CormorantGaramond-Regular.ttf",
+    "История науки": "fonts/Montserrat-Regular.ttf",
+    "Исторические кулинарные традиции": "fonts/Alice-Regular.ttf",
+    "История моды": "fonts/PlayfairDisplay-Regular.ttf",
+    "Исторические спортивные события": "fonts/Oswald-Regular.ttf",
+    "История образования": "fonts/PTSerif-Regular.ttf",
+    "Исторические эпидемии и пандемии (т)": "fonts/Merriweather_120pt-Regular.ttf",
+    "История окружающей среды (т)": "fonts/PTSans-Regular.ttf",
+    "__default__": "fonts/Roboto-Regular.ttf"
+},
   "moods": [
     {"value": "Загадочное", "weight": 3},
     {"value": "Героическое", "weight": 3},
