--- a/.github/workflows/check-midjourney.yml
+++ b/.github/workflows/check-midjourney.yml
@@ -2,8 +2,8 @@ name: Check MidJourney Status
 
 on:
   schedule:
-    - cron: "30 21 * * *"  # Запуск в 01:00 UTC (через 1 час после 00:00)
-    - cron: "30 23 * * *"  # Запуск в 03:00 UTC (через 3 часа после 00:00)
+   # - cron: "30 21 * * *"  # Запуск в 01:00 UTC (через 1 час после 00:00)
+   # - cron: "30 23 * * *"  # Запуск в 03:00 UTC (через 3 часа после 00:00)
 
 jobs:
   check-midjourney:
