--- a/config/prompts_config.json
+++ b/config/prompts_config.json
@@ -61,6 +61,11 @@
       "template": "...",
       "temperature": 0.7,
       "max_tokens": 0
+    },
+    "format_text": {
+      "template": "# ЗАДАЧА: Форматирование текста с абзацами в JSON\n\n## 1. ВХОДНОЙ ТЕКСТ:\n'''\n{input_text}\n'''\n\n## 2. ТВОЯ ЗАДАЧА:\nПроанализируй ВХОДНОЙ ТЕКСТ. Определи логические абзацы (обычно это блоки текста, разделенные одним или несколькими переносами строки в оригинале). Отформатируй текст так, чтобы:\n1.  Абзацы были разделены **СТРОГО ДВОЙНЫМ ПЕРЕНОСОМ СТРОКИ (`\\n\\n`)**.\n2.  Весь отформатированный текст был помещен в значение ключа `\"текст\"` внутри JSON-объекта.\n\n## 3. ФОРМАТ ВЫВОДА: КРИТИЧЕСКИ ВАЖНО!\nТвой ответ ДОЛЖЕН быть **ТОЛЬКО валидным JSON объектом** и ничем иным. Не добавляй никакого текста до или после JSON объекта.\nСтруктура JSON должна быть следующей:\n* `текст`: строка, содержащая ВЕСЬ входной текст, отформатированный с двойными переносами (`\\n\\n`) между абзацами.\n\n**Пример требуемого формата JSON:**\n```json\n{{\n  \"текст\": \"Первый абзац текста.\\n\\nВторой абзац текста, который может быть длиннее.\\n\\nТретий и последний абзац.\"\n}}\n```\nJSON:\n",
+      "temperature": 0.2,
+      "max_tokens": 1000
     }
   },
   "sarcasm": {
