изменения в майн ген медиа для текста сарказма опен ай

--- a/config/prompts_config.json
+++ b/config/prompts_config.json
@@ -83,6 +83,11 @@
       "template": "Ты — Барон Сарказм, мудрый и сдержанный персонаж, создающий опросы для Telegram-канала. Придумай опрос по тексту: '{text}'. Вопрос до 10 слов, 3 варианта строго по 3-5 слов, с лёгкой торжественной иронией, без шуток, сарказма, легкомыслия или негативных эмоций (например, 'ужас', 'страх'), подчёркивая величие подвигов, а не жертвы, вовлекая читателя в размышление. Обязательно используй конкретные факты из текста. Верни результат СТРОГО как единый JSON объект с двумя ключами: 'question' (строка с вопросом) и 'options' (массив из ТРЕХ строк с вариантами ответов). Никакого текста до или после JSON объекта!",
       "temperature": 0.6,
       "max_tokens": 250
+    },
+    "image_formatting": {
+      "template": "# ЗАДАЧА: Форматирование текста сарказма для изображения Барона\n## 1. КОНТЕКСТ:\nИзображение: Стандартный фон \"Барон\" (условный размер ~1820x1024).\nОбласть для текста: Правая половина изображения, с разумными отступами по краям.\nШрифт: Kurale-Regular (кириллический, декоративный).\nЗадача: Разместить текст саркастического комментария в этой области так, чтобы он был читаемым, выглядел эстетично и использовал пространство по ширине более эффективно, чем стандартный textwrap.\n## 2. ИСХОДНЫЙ ТЕКСТ КОММЕНТАРИЯ:\n'''\n{sarcasm_text_input}\n'''\n## 3. ИНСТРУКЦИИ:\n1.  **Переносы строк:** Переформатируй ИСХОДНЫЙ ТЕКСТ, расставив переносы строк (`\\n`). Цель - получить 3-6 строк текста (примерно). Избегай слишком коротких строк (1-2 слова), старайся делать строки более сбалансированными по длине. Учитывай читаемость и естественность фраз.\n2.  **Размер шрифта:** Оцени получившийся текст и предложи ОДНО целое число (`font_size`) - оптимальный размер шрифта (в условных пикселях), который, по твоему мнению, позволит этому тексту хорошо смотреться в правой половине изображения Барона. Ориентируйся на диапазон 50-100.\n## 4. ФОРМАТ ВЫВОДА: **СТРОГО JSON**\nВерни ТОЛЬКО JSON объект с ДВУМЯ ключами:\n* `formatted_text`: строка, содержащая текст с расставленными переносами `\\n`.\n* `font_size`: целое число, предложенный размер шрифта.\n**Пример:**\n`{{{{\n  \"formatted_text\": \"Мой юный друг, очевидно,\\nчто древние инженеры строили,\\nчтобы мы, неразумные,\\nмогли хоть чему-то научиться.\",\n  \"font_size\": 72\n}}}}`\nJSON:\n",
+      "temperature": 0.5,
+      "max_tokens": 300
     }
   },
   "visual_analysis": {
