--- a/config/creative_config.json
+++ b/config/creative_config.json
@@ -1,42 +1,4 @@
 {
-  "FOCUS_FONT_MAPPING":{
-    "Исторические факты": "fonts/PTSerif-Regular.ttf",
-    "Исторические личности": "fonts/CormorantGaramond-Regular.ttf",
-    "Знаковые битвы (т)": "fonts/Oswald-Regular.ttf",
-    "Трагедии человечества (т)": "fonts/Merriweather_120pt-Regular.ttf",
-    "Доисторические события": "fonts/Arvo-Regular.ttf",
-    "Древние цивилизации": "fonts/Forum-Regular.ttf",
-    "Необычные открытия": "fonts/Montserrat-Regular.ttf",
-    "Артефакты и реликвии": "fonts/OldStandardTT-Regular.ttf",
-    "Конспирологические теории": "fonts/PTSansNarrow-Regular.ttf",
-    "Загадки истории": "fonts/EBGaramond-Regular.ttf",
-    "Исторические курьезы": "fonts/Comfortaa-Regular.ttf",
-    "Великие изобретения": "fonts/Roboto-Regular.ttf",
-    "Культурные феномены": "fonts/PlayfairDisplay-Regular.ttf",
-    "Исторические карты": "fonts/PTSans-Regular.ttf",
-    "История через цитаты": "fonts/Merriweather_120pt-Regular.ttf",
-    "Династии и монархи": "fonts/CormorantGaramond-Regular.ttf",
-    "Важные документы истории": "fonts/PTSerif-Regular.ttf",
-    "Мифы и легенды": "fonts/YesevaOne-Regular.ttf",
-    "Исторические праздники": "fonts/YesevaOne-Regular.ttf",
-    "Великие путешественники": "fonts/PTSans-Regular.ttf",
-    "История медицины": "fonts/PTSerif-Regular.ttf",
-    "Религии и верования": "fonts/OldStandardTT-Regular.ttf",
-    "Архитектурные чудеса": "fonts/Forum-Regular.ttf",
-    "История в искусстве": "fonts/PlayfairDisplay-Regular.ttf",
-    "Экономические кризисы и взлеты (т)": "fonts/RobotoSlab-Regular.ttf",
-    "История технологий": "fonts/Roboto-Regular.ttf",
-    "Исторические конфликты и их разрешение (т)": "fonts/Oswald-Regular.ttf",
-    "Женщины в истории": "fonts/CormorantGaramond-Regular.ttf",
-    "История науки": "fonts/Montserrat-Regular.ttf",
-    "Исторические кулинарные традиции": "fonts/Alice-Regular.ttf",
-    "История моды": "fonts/PlayfairDisplay-Regular.ttf",
-    "Исторические спортивные события": "fonts/Oswald-Regular.ttf",
-    "История образования": "fonts/PTSerif-Regular.ttf",
-    "Исторические эпидемии и пандемии (т)": "fonts/Merriweather_120pt-Regular.ttf",
-    "История окружающей среды (т)": "fonts/PTSans-Regular.ttf",
-    "__default__": "fonts/Roboto-Regular.ttf"
-},
   "moods": [
     {"value": "Загадочное", "weight": 3},
     {"value": "Героическое", "weight": 3},
@@ -48,10 +10,14 @@
     {"value": "Воодушевляющее", "weight": 3},
     {"value": "Победное", "weight": 3},
     {"value": "Зловещее", "weight": 3},
-    {"value": "Торжественное", "weight": 2},
+    {"value": "Тревожное", "weight": 3},
+    {"value": "Мечтательное", "weight": 2},
+    {"value": "Безмятежное", "weight": 1},
+    {"value": "Игривое", "weight": 2},
+    {"value": "Дерзкое", "weight": 3},
+    {"value": "Меланхоличное", "weight": 2},
     {"value": "Ностальгическое (светлое)", "weight": 2},
     {"value": "Ностальгическое (грустное)", "weight": 2},
-    {"value": "Меланхоличное", "weight": 2},
     {"value": "Задумчивое", "weight": 2},
     {"value": "Сюрреалистичное", "weight": 2},
     {"value": "Динамичное", "weight": 2},
@@ -66,7 +32,14 @@
     {"value": "Отчаянное", "weight": 1},
     {"value": "Отстраненное", "weight": 1},
     {"value": "Будничное", "weight": 1},
-    {"value": "Фаталистичное", "weight": 1}
+    {"value": "Фаталистичное", "weight": 1},
+    {"value": "Ликующее", "weight": 3},
+    {"value": "Созерцательное", "weight": 2},
+    {"value": "Предвкушающее", "weight": 2},
+    {"value": "Опасливое", "weight": 2},
+    {"value": "Скептическое", "weight": 2},
+    {"value": "Насмешливое", "weight": 3},
+    {"value": "Благоговейное", "weight": 2}
   ],
   "emotional_arcs": [
     "Спокойствие -> Тревога/Напряжение",
@@ -82,7 +55,13 @@
     "Единение/Гармония -> Конфликт/Раскол",
     "Статичность/Застой -> Динамика/Взрыв",
     "Восхищение/Красота -> Ужас/Отвращение",
-    "Ожидание/Предвкушение -> Неожиданный Поворот"
+    "Ожидание/Предвкушение -> Неожиданный Поворот",
+    "Скука/Рутина -> Внезапное Событие/Приключение",
+    "Страх/Паника -> Обретение Смелости/Спасение",
+    "Ненависть/Гнев -> Прощение/Примирение",
+    "Замешательство/Недоумение -> Ясность/Понимание",
+    "Изоляция/Одиночество -> Общность/Принадлежность",
+    "Триумф/Победа -> Осознание Цены/Последствий"
   ],
   "creative_prompts": {
     "main": [
@@ -94,7 +73,7 @@
       {"value": "Фокус на Чувствах (Визуально)", "weight": 3},
       {"value": "Символический Предмет", "weight": 3},
       {"value": "Эмоциональная Дуга", "weight": 3},
-      {"value": "Визуализация Звука", "weight": 3},
+      {"value": "Визуализация Звука", "weight": 3}, 
       {"value": "Взгляд Со Стороны", "weight": 2},
       {"value": "Обратный Ход Времени", "weight": 2},
       {"value": "Сон или Галлюцинация", "weight": 2},
@@ -108,7 +87,12 @@
       {"value": "Левитация / Невесомость", "weight": 2},
       {"value": "Растворение / Исчезновение", "weight": 2},
       {"value": "Иллюзия Одного Кадра", "weight": 2},
-      {"value": "Контрастная Аналогия", "weight": 2}
+      {"value": "Контрастная Аналогия", "weight": 2},
+      {"value": "Повествование через Детали", "weight": 3},
+      {"value": "Резкий Монтажный Переход", "weight": 2},
+      {"value": "Предзнаменование (Foreshadowing)", "weight": 3},
+      {"value": "Макгаффин (Объект, движущий сюжет)", "weight": 2},
+      {"value": "Скрытый Смысл / Подтекст", "weight": 3}
     ],
     "experimental": [
       "\"Живая\" Камера",
@@ -118,7 +102,11 @@
       "Единственный Движущийся Элемент",
       "Перевернутая Камера",
       "Архаичность / Отказ от Современности",
-      "Концептуальный \"Match Cut\" (Связь с Другим Роликом)"
+      "Концептуальный \"Match Cut\" (Связь с Другим Роликом)",
+      "Разрушение Четвертой Стены (Визуально)",
+      "Глитч-Арт / Искажения",
+      "Интерактивный Элемент (Намек)",
+      "Минималистичная Композиция"
     ]
   },
   "perspective_types": [
@@ -135,7 +123,18 @@
     "`Голландский угол / Заваленный горизонт` (Dutch Angle)",
     "`Камера наблюдения` (Surveillance Camera View)",
     "`Вид из окна / иллюминатора` (Window / Porthole View)",
-    "`Невозможный ракурс` (Impossible Angle)"
+    "`Невозможный ракурс` (Impossible Angle)",
+    "`Вид из глаз насекомого` (Insect's Eye View)",
+    "`Вид через калейдоскоп` (Kaleidoscope View)",
+    "`Снизу-вверх из-под земли` (Underground Upwards View)",
+    "`Тепловизор / Инфракрасный вид` (Thermal/Infrared View)",
+    "`Вид через искажающее стекло/воду` (Distorted Glass/Water View)",
+    "`Панорамный вид / Сверхширокий угол` (Panoramic/Ultra-Wide Angle)",
+    "`Вид от третьего лица, следящий за объектом` (Third-Person Follow Cam)",
+    "`Изометрическая проекция` (Isometric View)",
+    "`Вид сверху (Top-Down)`",
+    "`Силуэтный вид` (Silhouette View)",
+    "`Вид через бинокль/телескоп` (Binoculars/Telescope View)"
   ],
   "visual_metaphor_types": [
     "`Символический Объект`",
@@ -148,7 +147,16 @@
     "`Геометрическая Абстракция`",
     "`Трансформация / Метаморфоза`",
     "`Синекдоха / Метонимия`",
-    "`Визуальная Ирония`"
+    "`Визуальная Ирония`",
+    "`Аллегория (через сцену/персонажей)`",
+    "`Гипербола (визуальное преувеличение)`",
+    "`Литота (визуальное преуменьшение)`",
+    "`Оксюморон (сочетание несочетаемого визуально)`",
+    "`Параллелизм (повторение визуальных структур)`",
+    "`Визуализация отсутствия/пустоты`",
+    "`Разрушение как символ`",
+    "`Рост/развитие как символ`",
+    "`Путь/дорога как символ`"
   ],
   "director_styles": [
     "Квентин Тарантино",
@@ -168,7 +176,12 @@
     "Дэвид Финчер",
     "Братья Коэн",
     "Жан-Люк Годар (Французская новая волна)",
-    "Федерико Феллини"
+    "Федерико Феллини",
+    "Ингмар Бергман",
+    "Дени Вильнёв",
+    "Ларс фон Триер",
+    "Мартин Скорсезе",
+    "Стивен Спилберг"
   ],
   "artist_styles": [
     "Пабло Пикассо (Кубизм)",
@@ -185,7 +198,64 @@
     "Фрида Кало (Сюрреализм / Символизм)",
     "Джексон Поллок (Абстрактный экспрессионизм)",
     "Караваджо (Барокко / Кьяроскуро)",
-    "Леонардо да Винчи (Высокое Возрождение)"
+    "Леонардо да Винчи (Высокое Возрождение)",
+    "Иван Айвазовский (Романтизм / Маринизм)",
+    "Казимир Малевич (Супрематизм)",
+    "Эдвард Хоппер (Американский реализм)",
+    "Джорджия О'Кифф (Модернизм)",
+    "Жан-Мишель Баския (Неоэкспрессионизм)"
+  ],
+  "art_movements": [
+    "Барокко",
+    "Импрессионизм",
+    "Сюрреализм",
+    "Ар-деко",
+    "Киберпанк",
+    "Стимпанк",
+    "Экспрессионизм",
+    "Минимализм",
+    "Ренессанс",
+    "Романтизм",
+    "Кубизм",
+    "Футуризм",
+    "Конструктивизм",
+    "Поп-арт",
+    "Ар-нуво (Модерн)",
+    "Готика"
+  ],
+  "visual_styles": [
+    "Кинематографичный",
+    "Документальный",
+    "Рисованный (2D анимация)",
+    "Пиксель-арт",
+    "Low Poly",
+    "Фотореалистичный",
+    "Акварельный",
+    "Коллаж",
+    "3D-анимация (как Pixar)",
+    "Stop Motion",
+    "Черно-белый фильм",
+    "Сепия",
+    "Технический чертеж",
+    "Инфографика",
+    "Граффити"
+  ],
+  "atmospheric_styles": [
+    "Мрачный Нуар",
+    "Светлый Воздушный",
+    "Напряженный Клаустрофобный",
+    "Ностальгический Сепия",
+    "Яркий Насыщенный",
+    "Выцветший Потертый",
+    "Сновидческий (Dreamlike)",
+    "Гнетущий (Oppressive)",
+    "Эпический Величественный",
+    "Интимный Камерный",
+    "Психоделический",
+    "Готический Мрачный",
+    "Футуристический Стерильный",
+    "Постапокалиптический Пустынный",
+    "Волшебный Сказочный"
   ],
   "wildcard_elements": {
     "nouns": [
@@ -218,8 +288,7 @@
     "`Причина и Следствие Наоборот`",
     "`Прохождение Сквозь Объекты`",
     "`Замена Свойств`",
-    "`Эмоциональная Инверсия (Визуально)`",
-    "`Звук -> Визуал`"
+    "`Эмоциональная Инверсия (Визуально)`"
   ],
   "glitch_types": [
     "`Визуальный Шум / Статика`",
@@ -270,23 +339,23 @@
     "Everything dissolves or fades."
   ],
   "visual_analysis_criteria": [
-      {"name": "Dramatism", "weight": 1.2},
-      {"name": "Epicness", "weight": 1.5},
-      {"name": "Historical context", "weight": 1.0},
-      {"name": "Depth of scene", "weight": 1.0},
-      {"name": "Balance of elements", "weight": 1.0},
-      {"name": "Focus", "weight": 1.2},
-      {"name": "Contrast", "weight": 1.0},
-      {"name": "Atmospheric lighting", "weight": 1.3},
-      {"name": "Color palette", "weight": 1.0},
-      {"name": "Clarity of key elements", "weight": 1.0},
-      {"name": "No artifacts", "weight": 1.0},
-      {"name": "Plausibility", "weight": 1.0},
-      {"name": "Historical attributes", "weight": 1.0},
-      {"name": "Iconography", "weight": 1.0},
-      {"name": "Dynamic tension", "weight": 1.2},
-      {"name": "Uniqueness", "weight": 1.3},
-      {"name": "Cinematic quality", "weight": 1.5},
-      {"name": "Prompt match", "weight": 1.2}
+    {"name": "Dramatism", "weight": 1.2},
+    {"name": "Epicness", "weight": 1.5},
+    {"name": "Historical context", "weight": 1.0},
+    {"name": "Depth of scene", "weight": 1.0},
+    {"name": "Balance of elements", "weight": 1.0},
+    {"name": "Focus", "weight": 1.2},
+    {"name": "Contrast", "weight": 1.0},
+    {"name": "Atmospheric lighting", "weight": 1.3},
+    {"name": "Color palette", "weight": 1.0},
+    {"name": "Clarity of key elements", "weight": 1.0},
+    {"name": "No artifacts", "weight": 1.0},
+    {"name": "Plausibility", "weight": 1.0},
+    {"name": "Historical attributes", "weight": 1.0},
+    {"name": "Iconography", "weight": 1.0},
+    {"name": "Dynamic tension", "weight": 1.2},
+    {"name": "Uniqueness", "weight": 1.3},
+    {"name": "Cinematic quality", "weight": 1.5},
+    {"name": "Prompt match", "weight": 1.2}
   ]
 }
