--- a/config/creative_config.json
+++ b/config/creative_config.json
@@ -359,41 +359,41 @@
     {"name": "Prompt match", "weight": 1.2}
   ],
   "FOCUS_FONT_MAPPING": {
-    "__default__": "fonts/PT_Serif/PTSerif-Regular.ttf", 
-    "Исторические факты": "fonts/PT_Serif/PTSerif-Regular.ttf",
-    "Исторические личности": "fonts/Cormorant_Garamond/static/CormorantGaramond-Regular.ttf",
-    "Знаковые битвы (т)": "fonts/Oswald/static/Oswald-Regular.ttf",
-    "Трагедии человечества (т)": "fonts/Merriweather/static/Merriweather_120pt-Regular.ttf",
-    "Доисторические события": "fonts/Arvo/Arvo-Regular.ttf",
-    "Древние цивилизации": "fonts/Forum/Forum-Regular.ttf",
-    "Необычные открытия": "fonts/Montserrat/static/Montserrat-Regular.ttf",
-    "Артефакты и реликвии": "fonts/Old_Standard_TT/OldStandardTT-Regular.ttf",
-    "Конспирологические теории": "fonts/PT_Sans_Narrow/PTSansNarrow-Regular.ttf",
-    "Загадки истории": "fonts/EB_Garamond/static/EBGaramond-Regular.ttf",
-    "Исторические курьезы": "fonts/Comfortaa/static/Comfortaa-Regular.ttf",
-    "Великие изобретения": "fonts/Roboto/static/Roboto-Regular.ttf",
-    "Культурные феномены": "fonts/Playfair_Display/static/PlayfairDisplay-Regular.ttf",
-    "Исторические карты": "fonts/PT_Sans/PTSans-Regular.ttf",
-    "История через цитаты": "fonts/Merriweather/static/Merriweather_120pt-Regular.ttf",
-    "Династии и монархи": "fonts/Cormorant_Garamond/static/CormorantGaramond-Regular.ttf",
-    "Важные документы истории": "fonts/PT_Serif/PTSerif-Regular.ttf",
-    "Мифы и легенды": "fonts/Yeseva_One/YesevaOne-Regular.ttf",
-    "Исторические праздники": "fonts/Yeseva_One/YesevaOne-Regular.ttf",
-    "Великие путешественники": "fonts/PT_Sans/PTSans-Regular.ttf",
-    "История медицины": "fonts/PT_Serif/PTSerif-Regular.ttf",
-    "Религии и верования": "fonts/Old_Standard_TT/OldStandardTT-Regular.ttf",
-    "Архитектурные чудеса": "fonts/Forum/Forum-Regular.ttf",
-    "История в искусстве": "fonts/Playfair_Display/static/PlayfairDisplay-Regular.ttf",
-    "Экономические кризисы и взлеты (т)": "fonts/Roboto_Slab/static/RobotoSlab-Regular.ttf",
-    "История технологий": "fonts/Roboto/static/Roboto-Regular.ttf",
-    "Исторические конфликты и их разрешение (т)": "fonts/Oswald/static/Oswald-Regular.ttf",
-    "Женщины в истории": "fonts/Cormorant_Garamond/static/CormorantGaramond-Regular.ttf",
-    "История науки": "fonts/Montserrat/static/Montserrat-Regular.ttf",
-    "Исторические кулинарные традиции": "fonts/Alice/Alice-Regular.ttf",
-    "История моды": "fonts/Playfair_Display/static/PlayfairDisplay-Regular.ttf",
-    "Исторические спортивные события": "fonts/Oswald/static/Oswald-Regular.ttf",
-    "История образования": "fonts/PT_Serif/PTSerif-Regular.ttf",
-    "Исторические эпидемии и пандемии (т)": "fonts/Merriweather/static/Merriweather_120pt-Regular.ttf",
-    "История окружающей среды (т)": "fonts/PT_Sans/PTSans-Regular.ttf"
-  }  
+    "__default__": "fonts/PTSerif-Regular.ttf", 
+    "Исторические факты": "fonts/PTSerif-Regular.ttf",
+    "Исторические личности": "fonts/CormorantGaramond-Regular.ttf",
+    "Знаковые битвы (т)": "fonts/Oswald-Regular.ttf",
+    "Трагедии человечества (т)": "fonts/Merriweather_120pt-Regular.ttf",
+    "Доисторические события": "fonts/Arvo-Regular.ttf",
+    "Древние цивилизации": "fonts/Forum-Regular.ttf",
+    "Необычные открытия": "fonts/Montserrat-Regular.ttf",
+    "Артефакты и реликвии": "fonts/OldStandardTT-Regular.ttf",
+    "Конспирологические теории": "fonts/PTSansNarrow-Regular.ttf",
+    "Загадки истории": "fonts/EBGaramond-Regular.ttf",
+    "Исторические курьезы": "fonts/Comfortaa-Regular.ttf",
+    "Великие изобретения": "fonts/Roboto-Regular.ttf",
+    "Культурные феномены": "fonts/PlayfairDisplay-Regular.ttf",
+    "Исторические карты": "fonts/PTSans-Regular.ttf",
+    "История через цитаты": "fonts/Merriweather_120pt-Regular.ttf",
+    "Династии и монархи": "fonts/CormorantGaramond-Regular.ttf",
+    "Важные документы истории": "fonts/PTSerif-Regular.ttf",
+    "Мифы и легенды": "fonts/YesevaOne-Regular.ttf",
+    "Исторические праздники": "fonts/YesevaOne-Regular.ttf",
+    "Великие путешественники": "fonts/PTSans-Regular.ttf",
+    "История медицины": "fonts/PTSerif-Regular.ttf",
+    "Религии и верования": "fonts/OldStandardTT-Regular.ttf",
+    "Архитектурные чудеса": "fonts/Forum-Regular.ttf",
+    "История в искусстве": "fonts/PlayfairDisplay-Regular.ttf",
+    "Экономические кризисы и взлеты (т)": "fonts/RobotoSlab-Regular.ttf",
+    "История технологий": "fonts/Roboto-Regular.ttf",
+    "Исторические конфликты и их разрешение (т)": "fonts/Oswald-Regular.ttf",
+    "Женщины в истории": "fonts/CormorantGaramond-Regular.ttf",
+    "История науки": "fonts/Montserrat-Regular.ttf",
+    "Исторические кулинарные традиции": "fonts/Alice-Regular.ttf",
+    "История моды": "fonts/PlayfairDisplay-Regular.ttf",
+    "Исторические спортивные события": "fonts/Oswald-Regular.ttf",
+    "История образования": "fonts/PTSerif-Regular.ttf",
+    "Исторические эпидемии и пандемии (т)": "fonts/Merriweather_120pt-Regular.ttf",
+    "История окружающей среды (т)": "fonts/PTSans-Regular.ttf"
+  }
 }
