--- a/config/config.json
+++ b/config/config.json
@@ -41,7 +41,7 @@
         "creative_config": "config/creative_config.json",
         "prompts_config": "config/prompts_config.json",
         "fonts_folder": "fonts/",
-        "sarcasm_baron_image": "assets/Барон.png",
+        "sarcasm_baron_image": "assets/Baron.png",
         "sarcasm_font": "assets/fonts/Kurale-Regular.ttf",
         "sarcasm_image_suffix": "_sarcasm.png",
         "tracker_path": "data/topics_tracker.json",
